# HorribleMenu

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  about.md  changelog.md  flash.toml  mod.json  support.md
.github/: FUNDING.yml
.github/workflows/: build.yml  multi-platform.yml  release.yml
include/: Events.hpp  Horrible.h  Horrible.hpp  Option.hpp  OptionalAPI.hpp  README.md
include/horrible/: API.h  OptionalAPI.hpp
src/: API.cpp  Horrible.cpp  Keybinds.cpp  Utils.h  Utils.hpp  main.cpp
src/classes/: Options.hpp
src/classes/src/: Jumpscares.cpp  Menu.cpp  Options.cpp
src/classes/ui/: MathQuiz.hpp  RandomAd.hpp  SpamChallenge.hpp
src/classes/ui/src/: MathQuiz.cpp  RandomAd.cpp  SpamChallenge.cpp
src/hooks/: Achievement.cpp  Dementia.cpp  Freeze.cpp  Mock.cpp  Parry.cpp  Placebo.cpp
src/hooks/GJBaseGameLayer/: FakeCrash.cpp  RandomNoJump.cpp  TimewarpJump.cpp
src/hooks/PlayLayer/: Adverts.cpp  BlackScreen.cpp  BlinkingIcon.cpp  BlurGame.cpp  Confetti.cpp  CrashGame.cpp  Earthquake.cpp  FakeDeath.cpp  Flipped.cpp  ForceLevels.cpp  Freeze.cpp  FreezeFPS.cpp  Friends.cpp  Gambler.cpp  Health.cpp  Math.cpp  Motivation.cpp  Oxygen.cpp  Pause.cpp  RandomMirror.cpp  Spam.cpp  UpsideDown.cpp  WhackAFace.cpp
src/hooks/PlayerObject/: ClickSpeed.cpp  DoubleJump.cpp  Gravity.cpp  OnIce.cpp  RandomGamemode.cpp  RandomIcon.cpp  RandomSpeed.cpp  SizeChanger.cpp  Sleepy.cpp  Sticky.cpp
src/include/: Horrible.cpp
src/menu/: CategoryItem.hpp  OptionCategoryItem.cppm  OptionCategoryItem.h  OptionCategoryItem.hpp  OptionItem.cppm  OptionItem.h  OptionItem.hpp  OptionMenu.cppm  OptionMenu.h  OptionMenu.hpp  OptionMenuButton.cppm  OptionMenuButton.h  OptionMenuButton.hpp  OptionMenuCredits.h  OptionMenuPopup.hpp  SettingV3.cppm  SettingV3.h  SettingV3.hpp
src/menu/src/: CategoryItem.cpp  FloatingButton.cpp  HorribleMenuPopup.cpp  ModOption.cpp  OptionCategoryItem.cpp  OptionItem.cpp  OptionMenu.cpp  OptionMenuButton.cpp  OptionMenuCredits.cpp  OptionMenuPopup.cpp  SettingV3.cpp
src/util/: Blur.hpp  Cursor.hpp  Jumpscares.hpp  Menu.hpp  Options.hpp  Randng.hpp  Themes.hpp
src/util/src/: Cursor.cpp  Jumpscares.cpp  Menu.cpp  Options.cpp  Themes.cpp
src/util/ui/: MathQuiz.hpp  RandomAd.hpp  SpamChallenge.hpp  WhackButton.hpp
src/util/ui/src/: MathQuiz.cpp  RandomAd.cpp  SpamChallenge.cpp  WhackButton.cpp
